[package]
name = "retrace"
description = "Safe, generic rollback log with predictable latency"
repository = "https://github.com/chitoyuu/retrace"
documentation = "https://docs.rs/retrace"
authors = ["Chitose Yuuzaki <chitoyuu@potatoes.gay>"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2018"
readme = "README.md"
keywords = ["undo", "no_std"]
categories = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.4"

[dev-dependencies]
criterion = "0.3"
rand = "0.8.4"

[[bench]]
name = "bench"
harness = false
required-features = ["bench"]

[features]
default = ["std"]
std = []
bench = []